--- a/ChessTournament/src/FirstRoundFrame/FirstRoundFrame.form
+++ b/ChessTournament/src/FirstRoundFrame/FirstRoundFrame.form
@@ -165,6 +165,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="SAVE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="PLAYER__1">
       <Properties>
